FPSInfoService: Revamp FPS counter
Make it more prominent and adapt to M3 colors

[elpaablo]: add top margin and text size and use Alpha colors

Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>
Signed-off-by: elpaablo <donopwhile1@gmail.com>

--- a/packages/SystemUI/res/drawable/fpsinfo_bg.xml
+++ b/packages/SystemUI/res/drawable/fpsinfo_bg.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
     <solid android:color="@*android:drawable/color_accent_primary_alpha"/>
-    <corners android:radius="28dp"/>
+    <corners android:topRightRadius="12dp" android:bottomRightRadius="12dp"/>
+
 </shape>
