--- a/packages/SystemUI/res/values/alpha_dimens.xml
+++ b/packages/SystemUI/res/values/alpha_dimens.xml
@@ -26,4 +26,7 @@
     <dimen name="qs_header_image_bottom_margin">0dp</dimen>
     <dimen name="qs_header_image_min_height">50dp</dimen>
 
+    <!-- FPSInfo view -->
+    <dimen name="fps_info_margin_top">120dp</dimen>
+
 </resources>
