--- a/core/res/res/values/alpha_symbols.xml
+++ b/core/res/res/values/alpha_symbols.xml
@@ -89,6 +89,11 @@
     <java-symbol type="string" name="config_batterymeterLandBoltPathOrigami" />
     <java-symbol type="string" name="config_batterymeterLandPowersavePathOrigami" />
     <java-symbol type="string" name="config_batterymeterLandErrorPerimeterPathOrigami" />
+    <java-symbol type="string" name="config_batterymeterLandPerimeterPathMiUIPill" />
+    <java-symbol type="string" name="config_batterymeterLandFillMaskMiUIPill" />
+    <java-symbol type="string" name="config_batterymeterLandBoltPathMiUIPill" />
+    <java-symbol type="string" name="config_batterymeterLandPowersavePathMiUIPill" />
+    <java-symbol type="string" name="config_batterymeterLandErrorPerimeterPathMiUIPill" />
 
     <java-symbol type="id" name="qs_state_layer" />
 
