--- a/packages/SystemUI/res/values/alpha_dimens.xml
+++ b/packages/SystemUI/res/values/alpha_dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="status_bar_battery_icon_width_landscape_ios15">24.0dip</dimen>
     <dimen name="status_bar_battery_icon_width_landscape_ios16">24.0dip</dimen>
     <dimen name="status_bar_battery_icon_width_landscape_origami">20.0dip</dimen>
+    <dimen name="status_bar_battery_icon_width_landscape_miui_pill">24.0dip</dimen>
 
     <dimen name="status_bar_battery_icon_height_landscape_signal">21.0dip</dimen>
     <dimen name="status_bar_battery_icon_height_landscape_line">28.0dip</dimen>
@@ -21,6 +22,7 @@
     <dimen name="status_bar_battery_icon_height_landscape_ios15">12.0dip</dimen>
     <dimen name="status_bar_battery_icon_height_landscape_ios16">12.0dip</dimen>
     <dimen name="status_bar_battery_icon_height_landscape_origami">12.0dip</dimen>
+    <dimen name="status_bar_battery_icon_height_landscape_miui_pill">12.0dip</dimen>
 
     <!-- QS header image -->
     <dimen name="qs_header_image_side_margin">0dp</dimen>
