--- a/core/res/res/values/alpha_symbols.xml
+++ b/core/res/res/values/alpha_symbols.xml
@@ -84,6 +84,11 @@
     <java-symbol type="string" name="config_batterymeterLandBoltPathiOS16" />
     <java-symbol type="string" name="config_batterymeterLandPowersavePathiOS16" />
     <java-symbol type="string" name="config_batterymeterLandErrorPerimeterPathiOS16" />
+    <java-symbol type="string" name="config_batterymeterLandPerimeterPathOrigami" />
+    <java-symbol type="string" name="config_batterymeterLandFillMaskOrigami" />
+    <java-symbol type="string" name="config_batterymeterLandBoltPathOrigami" />
+    <java-symbol type="string" name="config_batterymeterLandPowersavePathOrigami" />
+    <java-symbol type="string" name="config_batterymeterLandErrorPerimeterPathOrigami" />
 
     <java-symbol type="id" name="qs_state_layer" />
 
