--- a/core/res/res/values/alpha_symbols.xml
+++ b/core/res/res/values/alpha_symbols.xml
@@ -93,4 +93,8 @@
     <!-- Smart 5G -->
     <java-symbol type="bool" name="config_supportSmart5G" />
 
+    <!-- Define device configs on boot -->
+    <java-symbol type="array" name="global_device_configs_override" />
+    <java-symbol type="array" name="device_configs_override" />
+
 </resources>
