Pixel fixup: UDFPS: trigger onFingerDown with regular action down events
Pixel 7 and Pixel 7 Pro (and possibly other devices) got broken UDFPS after this change. *
So, add an overlay to conditionally make the call.

* see: https://github.com/AlphaDroid-Project/frameworks_base/commit/67e46a1036f737836878ead1b290e98da4f83564

--- a/packages/SystemUI/res/values/alpha_config.xml
+++ b/packages/SystemUI/res/values/alpha_config.xml
@@ -2,4 +2,7 @@
 
 <resources>
 
+    <!-- Whether to trigger OnFingerDown with regular action down events -->
+    <bool name="config_udfpsNeedsFingerDownOnActionDown">true</bool>
+
 </resources>
