Pixel fixup: UdfpsView: insert a condition on illumination dot logic
* see: https://github.com/AlphaDroid-Project/frameworks_base/commit/5193f41beb67900435ce47c653463f0c7d6317ca and https://github.com/AlphaDroid-Project/frameworks_base/commit/2d5eb37f695fa7bf07e6d8a4f45509493feca15b

--- a/packages/SystemUI/res/values/alpha_config.xml
+++ b/packages/SystemUI/res/values/alpha_config.xml
@@ -5,4 +5,7 @@
     <!-- Whether to trigger OnFingerDown with regular action down events -->
     <bool name="config_udfpsNeedsFingerDownOnActionDown">true</bool>
 
+    <!-- Whether the device needs illumination dot for global HBM -->
+    <bool name="config_udfpsNeedsIlluminationDot">true</bool>
+
 </resources>
