SystemUI: add percentage view to brightness bar [1/2]
* Based on commit:
https://github.com/Spark-Rom/frameworks_base/commit/72351c40679a6402de3234229ef00ff2be0b8a85

Co-Authored-By: elpaablo <donopwhile1@gmail.com>

--- a/packages/SystemUI/res/values/alpha_dimens.xml
+++ b/packages/SystemUI/res/values/alpha_dimens.xml
@@ -29,4 +29,8 @@
     <!-- FPSInfo view -->
     <dimen name="fps_info_margin_top">120dp</dimen>
 
+    <!-- Brightness bar percentage  -->
+    <dimen name="bb_percentage_margin_left">8dp</dimen>
+    <dimen name="bb_percentage_margin_right">0dp</dimen>
+
 </resources>
