Smart5gService: guard it with overlay

--- a/core/res/res/values/alpha_config.xml
+++ b/core/res/res/values/alpha_config.xml
@@ -156,4 +156,7 @@
     <!-- Boost Framework -->
     <bool name="config_supportsBoostFramework">false</bool>
 
+    <!-- Smart 5G -->
+    <bool name="config_supportSmart5G">false</bool>
+
 </resources>
