--- a/packages/SystemUI/res-keyguard/layout/status_bar_mobile_signal_group_inner.xml
+++ b/packages/SystemUI/res-keyguard/layout/status_bar_mobile_signal_group_inner.xml
@@ -50,16 +50,13 @@
                 android:visibility="gone"
                 />
         </FrameLayout>
-        <LinearLayout
-            android:id="@+id/evl_mobile_type_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical">
         <ImageView
             android:id="@+id/mobile_type"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_gravity="center_vertical"
+            android:paddingStart="2.5dp"
+            android:paddingEnd="1dp"
             android:visibility="gone" />
         <Space
             android:id="@+id/mobile_roaming_space"
@@ -71,8 +68,7 @@
             android:id="@+id/mobile_signal_type"
             android:layout_width="@dimen/status_bar_mobile_signal_width"
             android:layout_height="@dimen/status_bar_mobile_signal_with_type_height"
-            android:layout_gravity="center_vertical"
-            android:layoutDirection="locale">
+            android:layout_gravity="center_vertical">
             <com.android.systemui.statusbar.AnimatedImageView
                 android:id="@+id/mobile_signal"
                 android:layout_height="wrap_content"
@@ -97,7 +93,6 @@
                 android:scaleType="fitCenter"
                 android:layout_gravity="start|top" />
         </FrameLayout>
-        </LinearLayout>
         <ImageView
             android:id="@+id/mobile_roaming_large"
             android:layout_width="wrap_content"
